test/Sema/dynamic_attr_requires_module.code
// RUN: %target-language-frontend -typecheck -verify -enable-objc-interop %s
// RUN: %target-language-frontend -typecheck -verify -enable-objc-interop %s -parse-as-library

class Oof {
  @objc dynamic fn impliesObjC() { }
  // expected-error@-1 {{@objc attribute used without importing module 'Foundation'}}
}
